openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-scraper
  labels:
    app: fastapi-scraper
spec:
  type: ClusterIP
  selector:
    app: fastapi-scraper
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
