openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fastapi-scraper
  labels:
    app: fastapi-scraper
  annotations:
    haproxy.router.openshift.io/timeout: 1h
    haproxy.router.openshift.io/timeout-tunnel: 1h
spec:
  to:
    kind: Service
    name: fastapi-scraper
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
